--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
 GOOGLE_SCRIPT_URL=deployed_google_script_url
 APCA_API_KEY_ID=your_alpaca_key_id
 APCA_API_SECRET_KEY=your_alpaca_secret_key
-APCA_API_BASE_URL=https://paper-api.alpaca.markets 
+APCA_API_BASE_URL=https://paper-api.alpaca.markets/v2
