--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
 GOOGLE_SCRIPT_URL=deployed_google_script_url
 APCA_API_KEY_ID=your_alpaca_key_id
 APCA_API_SECRET_KEY=your_alpaca_secret_key
+ALPACA_PAPER=true
