--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
+alpaca-py==0.39.3
+annotated-types==0.7.0
 beautifulsoup4==4.13.4
 certifi==2025.1.31
 charset-normalizer==3.4.1
+FreeSimpleGUI==5.1.1
 frozendict==2.4.6
 idna==3.10
+msgpack==1.1.0
 multitasking==0.0.11
 numpy==2.1.0
 pandas==2.2.3
 peewee==3.17.9
 platformdirs==4.3.7
+pydantic==2.11.3
+pydantic_core==2.33.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
 pytz==2025.2
@@ -15,8 +21,10 @@ requests==2.32.3
 scipy==1.15.1
 six==1.17.0
 soupsieve==2.6
+sseclient-py==1.8.0
+typing-inspection==0.4.0
 typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
+websockets==15.0.1
 yfinance==0.2.54
-alpaca-py
