--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          persist-credentials: true
 
       - name: Set up Python 3.10
         uses: actions/setup-python@v5
@@ -65,4 +67,17 @@ jobs:
    
       - name: Run workflow
         run: python trade_workflow.py
-        # The bot logic (timing, sizing, etc.) is defined in trade_key_points.md 
+        # The bot logic (timing, sizing, etc.) is defined in trade_key_points.md
+
+
+      - name: Commit updated trades.db
+        run: |
+          git config --global user.name 'github-actions[bot]'
+          git config --global user.email 'github-actions[bot]@users.noreply.github.com'
+          git add trades.db
+          if git diff --cached --quiet; then
+            echo "No changes to commit"
+          else
+            git commit -m "chore: update trades.db"
+            git push
+          fi 
